--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,39 +11,66 @@
         <h1>YOUTUBER よしきの軌跡</h1>
         <nav>
             <ul class="one">
-                <li class="min" ><a href="">`きっかけ</a></li>
-                <li><a href="">活動内容</a></li>
-                <li><a href="">得たもの</a></li>
-                <li><a href="">今後の活動について</a></li>
+                <li class="min"><a href="#">きっかけ</a></li>
+                <li><a href="#">活動内容</a></li>
+                <li><a href="#">得たもの</a></li>
+                <li><a href="#">今後の活動について</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <section>
             <figure>
-                <img class="go" src="images/イラスト2.jpg" alt="サムネ">
-            </figure<p>ポケットモンスター剣盾の発売</p>
-            <p>知名度の拡大狙い</p>>
-        </section>
-        <section class="about">
-            <h2>きっかけ</h2>
-            <p>幼馴染みからYOUTUBER向いてるんじゃない？と言われたこと</p>
-            <p>ポケットモンスター剣盾の発売</p>
+                <img class="go" src="web.img/IMG_4775.JPG" alt="サムネイル">
+                <figcaption>ポケットモンスター剣盾の発売</figcaption>
+            </figure>
             <p>知名度の拡大狙い</p>
+        </section>
 
+        <nav>
+            <ul class="one">
+                <li><a href="#kikkake">きっかけ</a></li>
+                <li><a href="#katudo">活動内容</a></li>
+                <li><a href="#eta">得たもの</a></li>
+                <li><a href="#future">今後の活動について</a></li>
+            </ul>
+        </nav>
+        
+        <!-- 各セクションにidを追加 -->
+        <section id="kikkake">...</section>
+        <aside id="katudo">...</aside>
+        <section id="eta">...</section>
+        <section id="future">...</section>
         </section>
     </main>
+
     <aside>
         <h2>活動内容</h2>
-        <p>ポケモン、ウマ娘、原神など知名度の高い配信で多くの視聴者を集めました</p>
+        <p>2020年11月15日、ポケットモンスターの発売に伴い、ゲーム系ユーチューバー「よしき」として活動を開始。</p>
+        <p>ポケモン、ウマ娘、原神など、人気ゲームの配信で多くの視聴者を獲得しました。</p>
         <figure>
-            <img class="go" src="images/イラスト39.jpg" alt="サムネ２">
+            <img class="go" src="web.img/IMG_4771.JPG" alt="活動中のサムネ２">
         </figure>
-        <a href="" class="btn">チャンネルはこちらから</a>
+        <a href="https://www.youtube.com/@yoshiki-channel" class="btn" onclick="return confirmRedirect()">チャンネルはこちらから</a>
     </aside>
+
     <footer>
-        <small>&copy;＠teritama100 yoshiki</small>
+        <small>&copy; teritama100 yoshiki</small>
     </footer>
-    
 </body>
 </html>
+
+<script>
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener("click", function (e) {
+            e.preventDefault();
+            const target = document.querySelector(this.getAttribute("href"));
+            if (target) {
+                target.scrollIntoView({
+                    behavior: "smooth"
+                });
+            }
+        });
+    });
+    </script>
